--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:label="@string/title_activity_maps_v"></activity>
         <activity android:name=".MenuAct" />
         <activity android:name=".Recycler" />
+        <activity android:name=".RegistroEtiqueta"/>
     </application>
 
 </manifest>
